PR bin/43469 - correctly handle quoting of the pattern part of ${var%pat} type expansions. (from kre)