bin/sh/parser.h
@@ -1,4 +1,4 @@
-/*	$NetBSD: parser.h,v 1.18 2013/10/02 19:52:58 christos Exp $	*/
+/*	$NetBSD: parser.h,v 1.19 2016/02/22 20:02:00 christos Exp $	*/
 
 /*-
  * Copyright (c) 1991, 1993
@@ -53,6 +53,7 @@
 #define VSNUL		0x10	/* colon--treat the empty string as unset */
 #define VSLINENO	0x20	/* expansion of $LINENO, the line number
 				   follows immediately */
+#define VSPATQ		0x40	/* ensure correct pattern quoting in ${x#pat} */
 #define VSQUOTE	 	0x80	/* inside double quotes--suppress splitting */
 
 /* values of VSTYPE field */
